--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -123,26 +123,28 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/signUpButton"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_height="45dp"
                         android:layout_marginEnd="8dp"
+                        android:layout_weight="1"
                         android:background="@drawable/btn_green"
                         android:onClick="signUp"
                         android:text="@string/sign_up"
                         android:textColor="#FFFFFF"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/exitButton"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_height="45dp"
                         android:layout_marginStart="8dp"
+                        android:layout_weight="1"
                         android:background="@drawable/btn_green"
                         android:onClick="back"
                         android:text="@string/back"
                         android:textColor="#FFFFFF"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        tools:ignore="TouchTargetSizeCheck" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
