--- a/app/src/main/res/layout/activity_tournament.xml
+++ b/app/src/main/res/layout/activity_tournament.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyTournamentsActivity"
-    android:background="#424242">
-    >
+    android:background="#424242"
+    android:layout_marginBottom="52dp">
+
 
     <androidx.appcompat.widget.Toolbar
         android:paddingTop="16dp"
@@ -61,10 +62,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/goToEdit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="8dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/goToEdit"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
